--- a/app/assets/scss/style.scss
+++ b/app/assets/scss/style.scss
@@ -25,5 +25,6 @@
 @import "objects/_form";
 @import "objects/_nav";
 @import "objects/_preview";
-@import "objects/_intro";
+@import "objects/_about";
 @import "objects/_print";
+@import "objects/_error";
