--- a/app/assets/scss/_vars.scss
+++ b/app/assets/scss/_vars.scss
@@ -3,8 +3,6 @@
  * ---------- */
 
 //Colors
-$base: #3e3e3e; // Dark Gray
-$secondary: #f2f2f2; // Light Gray
-$tertiary: #959391;
-$highlight: #c3e8f4;; //
-$warning: #ef5636; // Red
+$base: #334050; // Dark Blue
+$secondary: #edeff0; // Light Gray
+$highlight: #de673d; // Red
