--- a/app/assets/scss/base/_links.scss
+++ b/app/assets/scss/base/_links.scss
@@ -3,9 +3,11 @@
  * ------- */
 
 p a {
-  color: $base;
+  color: $highlight;
+  text-decoration: none;
+  border-bottom: 2px solid $highlight;
 }
 
 .no-touchevents p a:hover {
-  color: $highlight;
+  opacity: .75;
 }
