Fixing some minor styling issues

--- a/app/assets/scss/base/_links.scss
+++ b/app/assets/scss/base/_links.scss
@@ -2,12 +2,12 @@
  *  LINKS  *
  * ------- */
 
-p a {
+.faq li a {
   color: $highlight;
   text-decoration: none;
   border-bottom: 2px solid $highlight;
 }
 
-.no-touchevents p a:hover {
+.no-touchevents .faq li a:hover {
   opacity: .75;
 }
