--- a/app/assets/scss/objects/_form.scss
+++ b/app/assets/scss/objects/_form.scss
@@ -38,7 +38,7 @@
   overflow: hidden;
   line-height: 1.4;
   font-size: 1em;
-  margin-bottom: 1em;
+  margin-bottom: 1em !important;
 }
 
 .select {
