slight adjustment to the hover state on the fancy dancy toggle

--- a/app/assets/scss/objects/_nav.scss
+++ b/app/assets/scss/objects/_nav.scss
@@ -99,6 +99,13 @@
 		background: lighten($base, 50%);
 }
 
+.no-touchevents .toggle--active .toggle:hover span {
+	background: white;
+}
+
+
+
+
 .toggle span, .toggle span:before, .toggle span:after {
   cursor: pointer;
   height: 2px;
