Quick fixes on the icons and mobile hover states

--- a/app/assets/scss/objects/_form.scss
+++ b/app/assets/scss/objects/_form.scss
@@ -196,7 +196,7 @@
 	display: inline-block;
 	width: 36px;
 	height: 36px;
-	bottom: -18px;
+	top: 0px;
 	margin-left: -18px;
 	border-radius: 50%;
   opacity: .4;
