--- a/app/assets/scss/objects/_preview.scss
+++ b/app/assets/scss/objects/_preview.scss
@@ -160,10 +160,6 @@
 	border: 1px dashed darken($secondary, 15%);
 	border-radius: 2px;
 	list-style-type: none !important;
-	&:hover {
-		border: 1px solid $highlight !important;
-		background: $highlight !important;
-	}
 	@include bp(medium) {
 		text-align: center;
 	}
@@ -174,10 +170,15 @@
 		display: block;
 		width: 100%;
 		height: 100%;
-		&:hover {
-			color: white !important;
-		}
 	}
+}
+
+.no-touchevents .incomplete:hover {
+	border: 1px solid $highlight !important;
+	background: $highlight !important;
+}
+.no-touchevents .incomplete a:hover {
+		color: white !important;
 }
 
 .applicant.incomplete {
