--- a/app/assets/scss/objects/_preview.scss
+++ b/app/assets/scss/objects/_preview.scss
@@ -74,7 +74,7 @@
 	}
 }
 
-.applicant-summary, .employment-list, .rental-list, .applicant-income, .applicant-list {
+.applicant-summary, .employment-list, .rental-list, .applicant-income, .applicant-list, .incomplete-list {
 	@include bp(medium) {
 		@include span-columns(9);
 	}
@@ -156,26 +156,35 @@
 }
 
 //Incomplete Sections
+
 .incomplete {
-	border: 1px dashed darken($secondary, 15%);
-	border-radius: 2px;
-	list-style-type: none !important;
+	border-top: 2px dashed darken($secondary, 25%);
+	padding-top: 1em;
+	margin: 4em 0 0 0;
+}
+
+.incomplete__subtitle {
+	margin-bottom: .5em;
+	font-weight: bold;
+	color: darken($secondary, 25%);
+}
+
+.incomplete a {
+	background: darken($secondary, 5%);
+	color: darken($secondary, 25%) !important;
+	border-radius: 2em;
+	text-decoration: none;
+	padding: .5em 1em;
+	display: inline-block;
+	float: left;
+	margin: 0 .5em .5em 0;
 	@include bp(medium) {
 		text-align: center;
 	}
-	a {
-		color: darken($secondary, 15%) !important;
-		text-decoration: none;
-		padding: .5em;
-		display: block;
-		width: 100%;
-		height: 100%;
-	}
 }
 
-.no-touchevents .incomplete:hover {
-	border: 1px solid $highlight !important;
-	background: $highlight !important;
+.no-touchevents .incomplete a:hover {
+	background: darken($secondary, 25%) !important;
 }
 .no-touchevents .incomplete a:hover {
 		color: white !important;
