--- a/app/assets/scss/objects/_preview.scss
+++ b/app/assets/scss/objects/_preview.scss
@@ -158,13 +158,18 @@
 //Incomplete Sections
 
 .incomplete {
-	border-top: 2px dashed darken($secondary, 25%);
-	padding-top: 1em;
-	margin: 4em 0 0 0;
+	border-top: 1px dashed darken($secondary, 15%);
+	background: $secondary;
+	padding: 2.5em 1em;
+	margin: -2em 1em 0 1em;
+	@include bp(medium) {
+		padding: 2.5em 4em;
+		margin: -2em 2em 0 2em;
+	}
 }
 
 .incomplete__subtitle {
-	margin-bottom: .5em;
+	margin-bottom: 1em;
 	font-weight: bold;
 	color: darken($secondary, 25%);
 }
