--- a/src/scss/objects/_form.scss
+++ b/src/scss/objects/_form.scss
@@ -42,7 +42,7 @@
 }
 
 .select {
-  background: $secondary url(../images/arrows.svg) no-repeat 97% 0!important;
+  background: $secondary url(./images/arrows.svg) no-repeat 97% 0!important;
 }
 
 .select-disabled {
