--- a/src/scss/objects/_home.scss
+++ b/src/scss/objects/_home.scss
@@ -23,7 +23,7 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
-		background-image: url('../images/homepage.jpg');
+		background-image: url('./images/homepage.jpg');
 		background-size: cover;
 		background-position: center;
 	}
