--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -20,9 +20,9 @@ body, p, input, textarea, select, button, select, option, textarea  {
 @font-face {
   font-family: 'icons';
   src:
-    url('../fonts/icons.ttf') format('truetype'),
-    url('../fonts/icons.woff') format('woff'),
-    url('../fonts/icons.svg?#icons') format('svg');
+    url('./fonts/icons.ttf') format('truetype'),
+    url('./fonts/icons.woff') format('woff'),
+    url('./fonts/icons.svg?#icons') format('svg');
   font-weight: normal;
   font-style: normal;
 }
