Refactor preview, temporary solution, Closes #59

--- a/src/scss/objects/_print.scss
+++ b/src/scss/objects/_print.scss
@@ -71,7 +71,7 @@
 	.btn--print--prview {
 		display: none;
 	}
-	.resume__section--rent {
+	.resume__section--rental-history {
 		margin-top: -2.5mm;
 	}
 	.page {
