--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -1,8 +1,8 @@
-/* ---------- *
- *  Variables *
- * ---------- */
+/* ----------- *
+ *  Variables  *
+ * ----------- */
 
-//Colors
+// Colors
 $base: #334050; // Dark Blue
 $secondary: #edeff0; // Light Gray
 $highlight: #de673d; // Red
