--- a/src/scss/base/_headings.scss
+++ b/src/scss/base/_headings.scss
@@ -1,7 +1,7 @@
-/* ------- *
- * Headings *
- * ------- */
+/* ---------- *
+ *  Headings  *
+ * ---------- */
 
-h1,h2,h3,h4,h5,h6 {
+h1, h2, h3, h4, h5, h6 {
 	line-height: 1.4;
 }
