--- a/src/scss/base/_links.scss
+++ b/src/scss/base/_links.scss
@@ -1,13 +1,13 @@
-/* ------- *
- *  LINKS  *
- * ------- */
+/* -------- *
+ *   Links  *
+ * -------- */
 
 .faq li a {
-  color: $highlight;
-  text-decoration: none;
-  border-bottom: 2px solid $highlight;
+	color: $highlight;
+	text-decoration: none;
+	border-bottom: 2px solid $highlight;
 }
 
 .no-touchevents .faq li a:hover {
-  opacity: .75;
+	opacity: .75;
 }
