--- a/src/scss/generic/_responsive.scss
+++ b/src/scss/generic/_responsive.scss
@@ -1,23 +1,23 @@
-/* ------- *
- * Responsive *
- * ------- */
+/* ------------- *
+ *   Responsive  *
+ * ------------- */
 
 @mixin bp($breakpoint) {
-  @if $breakpoint == "small" {
-    @media (min-width: 450px) {
-      @content;
-    }
-  }
+	@if $breakpoint == "small" {
+		@media (min-width: 450px) {
+			@content;
+		}
+	}
 
-  @else if $breakpoint == "medium" {
-    @media (min-width: 700px) {
-      @content;
-    }
-  }
+	@else if $breakpoint == "medium" {
+		@media (min-width: 700px) {
+			@content;
+		}
+	}
 
-  @else if $breakpoint == "large" {
-    @media (min-width: 1200px) {
-      @content;
-    }
-  }
+	@else if $breakpoint == "large" {
+		@media (min-width: 1200px) {
+			@content;
+		}
+	}
 }
