--- a/src/scss/objects/_about.scss
+++ b/src/scss/objects/_about.scss
@@ -1,38 +1,43 @@
-/* --------- *
- *   About   *
- * --------- */
+/* ------- *
+ *  About  *
+ * ------- */
 
 .faq {
 	margin: 2em auto;
 	padding: 2em 1em;
 	max-width: 750px;
 	text-align: left;
+
 	@extend %clearfix;
+
 	@include bp(medium) {
 		padding: 2.5em 2em;
 	}
 
-	.faq__title {
-		font-weight: bold;
-		width: 100%;
-		font-size: 2.5em;
-		text-transform: uppercase;
-		margin-bottom: .5em;
-	}
-	.faq__question {
-		display: inline-block;
-		font-weight: bold;
-		text-transform: uppercase;
-		margin-bottom: .5em;
-	}
 	p {
 		line-height: 1.4;
 	}
+
 	li {
 		float: left;
 		clear: both;
 		margin-bottom: 2em;
 	}
+}
+
+.faq__title {
+	font-weight: bold;
+	width: 100%;
+	font-size: 2.5em;
+	text-transform: uppercase;
+	margin-bottom: .5em;
+}
+
+.faq__question {
+	display: inline-block;
+	font-weight: bold;
+	text-transform: uppercase;
+	margin-bottom: .5em;
 }
 
 .page__link--about {
