--- a/src/scss/objects/_nav.scss
+++ b/src/scss/objects/_nav.scss
@@ -1,22 +1,23 @@
-/* ------- *
- *   Nav   *
- * ------- */
+/* ----- *
+ *  Nav  *
+ * ----- */
 
 .header {
 	background: white;
 	width: 100%;
-	@extend %clearfix;
 	position: fixed;
 	top: 0;
 	z-index: 999;
 	border-bottom: 1px solid $secondary;
+
+	@extend %clearfix;
+
 	@include bp(medium) {
 		border: 0;
 	}
 }
 .nav {
 	transition: all 300ms ease out;
-	-webkit-transition: all 300ms ease-out;
 	width: 300px;
 	transform: translate3d(-300px,0,0);
 	position: fixed;
@@ -26,28 +27,32 @@
 	background: $base;
 	z-index: 99;
 	padding: 4em 2em 0 3em;
+
 	@include bp(medium) {
 		width: 33%;
 		transform: translate3d(0,0,0);
 	}
- 	ul {
+
+	ul {
 		clear: both;
- 		padding: 0;
+		padding: 0;
 		margin: 0 auto;
 		max-width: 300px;
- 	}
- 	li {
- 		margin: 0 0 .5em 1em;
+	}
+
+	li {
+		margin: 0 0 .5em 1em;
 		clear: both;
- 	}
+	}
+
 	a {
 		text-decoration: none;
 	}
- }
+}
 
- .toggle--active .nav {
-  	transform: translate3d(0,0,0);
-  }
+.toggle--active .nav {
+	transform: translate3d(0,0,0);
+}
 
 .logo {
 	display: inline-block;
@@ -56,18 +61,21 @@
 	text-decoration: none;
 	clear: both;
 	color: white;
+
 	h1 {
 		display: flex;
 		color: white;
-    fill: white;
+		fill: white;
 		line-height: 1.1;
 		font-size: 1.1em;
 	}
-  svg {
-    width: 36px;
-    height: 36px;
+
+	svg {
+		width: 36px;
+		height: 36px;
 		margin-right: 8px;
-  }
+	}
+
 	span {
 		float: left;
 		font-size: 2.25em;
@@ -82,19 +90,21 @@
 	color: $base;
 	margin-left: 1em;
 	line-height: 50px;
+
 	@include bp(medium) {
 		display: none;
 	}
 }
 
-//Fancy Toggle Button
+// Fancy Toggle Button
 .toggle {
 	display: block;
 	position: absolute;
 	right: 1em;
 	top: 11px;
-  width: 26px;
+	width: 26px;
 	height: 28px;
+
 	@include bp(medium) {
 		display: none;
 	}
@@ -103,60 +113,71 @@
 .no-touchevents .toggle:hover span,
 .no-touchevents .toggle:hover span:before,
 .no-touchevents .toggle:hover span:after {
-		background: lighten($base, 50%);
+	background: lighten($base, 50%);
 }
 
 .no-touchevents .toggle--active .toggle:hover span {
 	background: white;
 }
 
-.toggle span, .toggle span:before, .toggle span:after {
-  cursor: pointer;
-  height: 2px;
-  width: 25px;
-  background: $base;
-  position: absolute;
-  display: block;
-  content: '';
-}
-.toggle span:before {
-  top: -7px;
-}
+.toggle span,
+.toggle span:before,
 .toggle span:after {
-  bottom: -7px;
+	content: '';
+	cursor: pointer;
+	height: 2px;
+	width: 25px;
+	background: $base;
+	position: absolute;
+	display: block;
 }
 
-.toggle span, .toggle span:before, .toggle span:after {
-  transition: all 200ms ease-in-out;
+.toggle span:before {
+	top: -7px;
 }
+
+.toggle span:after {
+	bottom: -7px;
+}
+
+.toggle span,
+.toggle span:before,
+.toggle span:after {
+	transition: all 200ms ease-in-out;
+}
+
 .toggle--active .toggle span {
-  background-color: white;
-}
-.toggle--active .toggle span:before, .toggle--active .toggle span:after {
-  top: 0;
-}
-.toggle--active .toggle span:before {
-  transform: rotate(45deg);
-}
-.toggle--active .toggle span:after {
-  transform: rotate(-45deg);
+	background-color: white;
 }
 
-//Nav Buttons
+.toggle--active .toggle span:before, .toggle--active .toggle span:after {
+	top: 0;
+}
+
+.toggle--active .toggle span:before {
+	transform: rotate(45deg);
+}
+
+.toggle--active .toggle span:after {
+	transform: rotate(-45deg);
+}
+
+// Nav Buttons
 .btn--nav {
-  color: darken($secondary, 50%);
+	color: darken($secondary, 50%);
 }
 
 .btn--nav--active {
 	color: white;
 	opacity: 1 !important;
+
 	.btn--nav__lines {
 		background: white;
 	}
 }
 
 .btn--nav__lines {
-	content: "";
+	content: '';
 	display: block;
 	background: darken($secondary, 50%);
 	height: 6px;
@@ -165,8 +186,9 @@
 	top: 11px;
 	position: relative;
 	right: 1em;
+
 	&:after {
-		content: "";
+		content: '';
 		display: block;
 		background: darken($secondary, 50%);
 		height: 30px;
@@ -186,7 +208,7 @@
 .btn--preview {
 	float: left;
 	position: relative;
-  display: flex;
+	display: flex;
 	align-items: center;
 	top: 1.5em;
 	right: 1em;
@@ -197,11 +219,12 @@
 	border-radius: 2em;
 	margin-right: .5em;
 	margin-bottom: 1em;
-  svg {
-    width: 16px;
-    height: 16px;
+
+	svg {
+		width: 16px;
+		height: 16px;
 		margin-right: 6px;
-  }
+	}
 }
 
 .btn--preview.btn--nav--active {
